@@ -1,3 +1,8 @@
+2007-07-12  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp-common.eclass (elisp-site-regen): Use einfon for the
+	initial message; suppress the newline in case of no changes.
+
 2007-07-11  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp-common.eclass: Add magic comments for man page generation.
